[gd_scene load_steps=52 format=3 uid="uid://chawhftcwjlwv"]

[ext_resource type="Script" path="res://Scripts/Player3D.gd" id="1_d4u14"]
[ext_resource type="Shape3D" uid="uid://oc7x3yamxs54" path="res://Scenes/Player/player3DWorldCollider.tres" id="3_7r586"]
[ext_resource type="AudioStream" uid="uid://dl1lyoq85nbun" path="res://Sound/boxslid/2.wav" id="3_bweji"]
[ext_resource type="Script" path="res://Scripts/PlayerLightFlicker.gd" id="4_lw1ik"]
[ext_resource type="AudioStream" uid="uid://c71yixocl7mka" path="res://Sound/boxslid/3.wav" id="4_m3sh6"]
[ext_resource type="AudioStream" uid="uid://cw05i4v6s8s8h" path="res://Sound/boxslid/4.wav" id="5_3cdji"]
[ext_resource type="Material" uid="uid://c1y0pwcoki4bc" path="res://Art/Player/PlayerMaterial.tres" id="5_qa7qm"]
[ext_resource type="Script" path="res://addons/game_state_helper/game_state_helper.gd" id="5_u0x8j"]
[ext_resource type="AudioStream" uid="uid://cgrhviwn145rs" path="res://Sound/boxslid/5.wav" id="6_u5ful"]
[ext_resource type="AudioStream" uid="uid://3owmubhpj6sx" path="res://Sound/sfx_jump_07-80241.mp3" id="6_udrat"]
[ext_resource type="AudioStream" uid="uid://coneyptv4vo6x" path="res://Sound/boxslid/1.wav" id="7_1xomu"]
[ext_resource type="AudioStream" uid="uid://cp7wwv4aibux4" path="res://Sound/boxslid/6.wav" id="7_ljwmq"]
[ext_resource type="AudioStream" uid="uid://brx6vify16nq3" path="res://Sound/rock-smash-6304-2.wav" id="8_3nptw"]
[ext_resource type="AudioStream" uid="uid://sehrcr6uc66o" path="res://Sound/rock-smash-6304-3.wav" id="9_8wbcd"]
[ext_resource type="AudioStream" uid="uid://dpachh5cfg8v7" path="res://Sound/rock-smash-6304-4.wav" id="10_otocq"]
[ext_resource type="AudioStream" uid="uid://uk3ak201qcvt" path="res://Sound/rock-smash-6304.wav" id="12_xr6tn"]
[ext_resource type="AudioStream" uid="uid://bm52hbrnqboug" path="res://Sound/walking-cartoon-3-29625.mp3" id="18_ki2kr"]

[sub_resource type="Animation" id="Animation_c6rop"]
resource_name = "IdleFront"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlashlightHolder:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector3(0, 3.14159, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual:mesh:material:uv1_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector3(0.083, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OmniLight3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.0341352, 0.0461332)]
}

[sub_resource type="Animation" id="Animation_dmvj2"]
resource_name = "IdleLeft"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlashlightHolder:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector3(0, 1.5708, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual:mesh:material:uv1_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector3(0.333, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OmniLight3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.0411295, 0.0341352, 0.0461332)]
}

[sub_resource type="Animation" id="Animation_dbr7m"]
resource_name = "IdleRight"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlashlightHolder:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector3(0, -1.5708, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual:mesh:material:uv1_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector3(0.583, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OmniLight3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.041, 0.034, 0.046)]
}

[sub_resource type="Animation" id="Animation_vdvev"]
resource_name = "IdleUp"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlashlightHolder:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual:mesh:material:uv1_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector3(0.834, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OmniLight3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.0341352, 0.0461332)]
}

[sub_resource type="Animation" id="Animation_qlguf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlashlightHolder:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 3.14159, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual:mesh:material:uv1_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.083, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OmniLight3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.0341352, 0.0461332)]
}

[sub_resource type="Animation" id="Animation_hyrc5"]
resource_name = "WalkDown"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlashlightHolder:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector3(0, 3.14159, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual:mesh:material:uv1_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector3(0, 0, 0), Vector3(0.083, 0, 0), Vector3(0.166, 0, 0), Vector3(0.083, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OmniLight3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.0341352, 0.0461332)]
}

[sub_resource type="Animation" id="Animation_bfjqw"]
resource_name = "WalkLeft"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlashlightHolder:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector3(0, 1.5708, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual:mesh:material:uv1_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector3(0.251, 0, 0), Vector3(0.334, 0, 0), Vector3(0.417, 0, 0), Vector3(0.334, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OmniLight3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.0411295, 0.0341352, 0.0461332)]
}

[sub_resource type="Animation" id="Animation_pu1yf"]
resource_name = "WalkRight"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlashlightHolder:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector3(0, -1.5708, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual:mesh:material:uv1_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector3(0.5, 0, 0), Vector3(0.583, 0, 0), Vector3(0.666, 0, 0), Vector3(0.583, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OmniLight3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.041, 0.034, 0.046)]
}

[sub_resource type="Animation" id="Animation_tv1lq"]
resource_name = "WalkUp"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlashlightHolder:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual:mesh:material:uv1_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector3(0.75, 0, 0), Vector3(0.833, 0, 0), Vector3(0.917, 0, 0), Vector3(0.833, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OmniLight3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.0341352, 0.0461332)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ixvbk"]
_data = {
"IdleFront": SubResource("Animation_c6rop"),
"IdleLeft": SubResource("Animation_dmvj2"),
"IdleRight": SubResource("Animation_dbr7m"),
"IdleUp": SubResource("Animation_vdvev"),
"RESET": SubResource("Animation_qlguf"),
"WalkDown": SubResource("Animation_hyrc5"),
"WalkLeft": SubResource("Animation_bfjqw"),
"WalkRight": SubResource("Animation_pu1yf"),
"WalkUp": SubResource("Animation_tv1lq")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u5h3q"]
animation = &"IdleUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8rp8v"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jd2ox"]
animation = &"IdleFront"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7y1uf"]
animation = &"IdleLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_rikve"]
blend_point_0/node = SubResource("AnimationNodeAnimation_u5h3q")
blend_point_0/pos = Vector2(0, -1)
blend_point_1/node = SubResource("AnimationNodeAnimation_8rp8v")
blend_point_1/pos = Vector2(1.1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_jd2ox")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_7y1uf")
blend_point_3/pos = Vector2(-1.1, 0)
min_space = Vector2(-1.1, -1)
max_space = Vector2(1.1, 1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_51dij"]
animation = &"WalkRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_osb6a"]
animation = &"WalkUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xdafi"]
animation = &"WalkLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hrp0u"]
animation = &"WalkDown"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_y3onc"]
blend_point_0/node = SubResource("AnimationNodeAnimation_51dij")
blend_point_0/pos = Vector2(1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_osb6a")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_xdafi")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_hrp0u")
blend_point_3/pos = Vector2(0, 1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8gx0x"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lotvq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ogmvb"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_lh46l"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_rikve")
states/Idle/position = Vector2(409, 156)
states/Start/position = Vector2(236, 161)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_y3onc")
states/Walk/position = Vector2(609, 156)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_8gx0x"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_lotvq"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_ogmvb")]
graph_offset = Vector2(34, 26)

[sub_resource type="QuadMesh" id="QuadMesh_1aga6"]
material = ExtResource("5_qa7qm")
size = Vector2(0.6, 0.6)

[sub_resource type="Animation" id="Animation_yj2dv"]
resource_name = "Flicker"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:omni_range")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.1, 2.3, 3.4, 3.7, 5.6, 6.6, 7.7, 8.8, 9, 9.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.7, 0.9, 0.7, 0.9, 0.7, 0.9, 0.7, 0.9, 0.7, 0.9, 0.7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.1, 2.3, 3.4, 3.7, 5.6, 6.6, 7.7, 8.8, 9, 9.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.7, 0.9, 0.7, 0.9, 0.7, 0.9, 0.7, 0.9, 0.7, 0.9, 0.7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:omni_attenuation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.5, 0.5]
}

[sub_resource type="Animation" id="Animation_wjqi3"]
resource_name = "FlickerDiminished"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:omni_range")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.1, 2.3, 3.4, 3.7, 5.6, 6.6, 7.7, 8.8, 9, 9.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.25, 0.3, 0.25, 0.3, 0.25, 0.3, 0.25, 0.3, 0.25, 0.3, 0.25]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.1, 2.3, 3.4, 3.7, 5.6, 6.6, 7.7, 8.8, 9, 9.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.1, 0.17, 0.1, 0.17, 0.1, 0.17, 0.1, 0.17, 0.1, 0.17, 0.1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:omni_attenuation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 1.0]
}

[sub_resource type="Animation" id="Animation_2hr34"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:omni_range")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:omni_attenuation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_orihg"]
_data = {
"Flicker": SubResource("Animation_yj2dv"),
"FlickerDiminished": SubResource("Animation_wjqi3"),
"RESET": SubResource("Animation_2hr34")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wnjs1"]
animation = &"FlickerDiminished"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o05af"]
animation = &"Flicker"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_eco1h"]
blend_point_0/node = SubResource("AnimationNodeAnimation_wnjs1")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_o05af")
blend_point_1/pos = 1.0
min_space = 0.0
sync = true

[sub_resource type="BoxShape3D" id="BoxShape3D_e6j8c"]
size = Vector3(0.369, 0.165, 0.363)

[sub_resource type="SphereShape3D" id="SphereShape3D_6ebfs"]
radius = 0.07

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
collision_mask = 13
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
floor_block_on_wall = false
floor_snap_length = 0.15
script = ExtResource("1_d4u14")
max_speed = 1.0
accel = 1501
friction = 2000
jump_strength = 3
slide_sfx = Array[AudioStream]([ExtResource("7_1xomu"), ExtResource("3_bweji"), ExtResource("4_m3sh6"), ExtResource("5_3cdji"), ExtResource("6_u5ful"), ExtResource("7_ljwmq")])
rock_break_sfx = Array[AudioStream]([ExtResource("8_3nptw"), ExtResource("9_8wbcd"), ExtResource("10_otocq"), ExtResource("12_xr6tn")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_ixvbk")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_lh46l")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = Vector2(-0.282051, -0.12)
parameters/Walk/blend_position = Vector2(0.000944257, -0.0538923)

[node name="Visual" type="MeshInstance3D" parent="."]
transform = Transform3D(1, -2.57152e-12, 9.09495e-12, 2.57152e-12, 1, 9.09495e-12, -9.09495e-12, -9.09495e-12, 1, 0, 0.0270278, 0)
cast_shadow = 2
mesh = SubResource("QuadMesh_1aga6")
skeleton = NodePath("../..")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 2.67397e-12, 0, -4.70429e-12, 1, 1.54614e-11, 0, -1.54614e-11, 1, 0, 0, 0)
shape = ExtResource("3_7r586")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.041, 0.034, 0.046)
light_color = Color(1, 0.878431, 0.721569, 1)
light_energy = 0.7
light_volumetric_fog_energy = 0.2
shadow_enabled = true
shadow_bias = 0.01
omni_range = 0.5
omni_attenuation = 0.5
script = ExtResource("4_lw1ik")

[node name="AnimationPlayer" type="AnimationPlayer" parent="OmniLight3D"]
autoplay = "FlickerDiminished"
libraries = {
"": SubResource("AnimationLibrary_orihg")
}

[node name="AnimationTree" type="AnimationTree" parent="OmniLight3D"]
tree_root = SubResource("AnimationNodeBlendSpace1D_eco1h")
anim_player = NodePath("../AnimationPlayer")
parameters/blend_position = 1.0

[node name="FlashlightHolder" type="Node3D" parent="."]
transform = Transform3D(-3.61999e-06, 0, -1, 0, 1, 0, 1, 0, -3.61999e-06, 0, 0, 0)
visible = false

[node name="SpotLight3D" type="SpotLight3D" parent="FlashlightHolder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.6102e-10, 0, -0.00870505)
light_color = Color(0.913736, 0.613487, 0, 1)
light_energy = 0.678
light_volumetric_fog_energy = 1.644
shadow_enabled = true
shadow_bias = 0.01
spot_attenuation = 0.574349

[node name="DraggableCheck" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0996924, 0)
collision_layer = 192
collision_mask = 48

[node name="CollisionShape3D" type="CollisionShape3D" parent="DraggableCheck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0257546, 0.010262)
shape = SubResource("BoxShape3D_e6j8c")

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
shape = ExtResource("3_7r586")
target_position = Vector3(0, 0, 0)

[node name="HoldPosition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.064, 0, 0)

[node name="InteractableNotBlockedRayCast" type="RayCast3D" parent="."]
hit_from_inside = true

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="."]
update_rotation = false
update_scale = false

[node name="GameStateHelper" type="Node" parent="."]
script = ExtResource("5_u0x8j")
save_properties = Array[String](["global_position"])

[node name="AltShapeCaster" type="ShapeCast3D" parent="."]
shape = SubResource("SphereShape3D_6ebfs")
target_position = Vector3(0, 0, 0)

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_udrat")
volume_db = -8.571
pitch_scale = 0.78
bus = &"SFX"

[node name="Slide" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_1xomu")
bus = &"SFX"

[node name="rockbreak" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_1xomu")
bus = &"SFX"

[node name="Footsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_ki2kr")
autoplay = true
bus = &"SFX"

[connection signal="area_entered" from="DraggableCheck" to="." method="_on_draggable_check_area_entered"]
[connection signal="area_exited" from="DraggableCheck" to="." method="_on_draggable_check_area_exited"]
